--- a/templates/project_admin.html
+++ b/templates/project_admin.html
@@ -4,7 +4,7 @@
 <div class="tab-pane fade show active" id="admin" role="tabpanel" aria-labelledby="admin-tab">
     <div class="card h-100 mt-4" style="background-color: #f0f8ff; border-radius: 10px;">
         <div class="card-body">
-            <h4 class="card-title mb-4">Administration du Projet</h4>
+            <h4 class="card-title mb-4">Paramètres du Projet</h4>
 
             <!-- Project Information Section -->
             <div class="admin-section mb-5">
