--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -153,7 +153,9 @@
                 <h2>{% block page_title %}Administration{% endblock %}</h2>
                 <div>
                     <span class="me-3">{{ user_first_name }}</span>
-                    <a href="{{ url_for('deconnexion') }}" class="btn btn-outline-secondary btn-sm">Déconnexion</a>
+                    <form action="{{ url_for('deconnexion') }}" method="POST" style="display: inline;">
+                        <button type="submit" class="btn btn-outline-secondary btn-sm">Déconnexion</button>
+                    </form>
                 </div>
             </div>
         </div>
