Add "Remember Me" functionality to user login

--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="form-group form-check d-flex justify-content-between align-items-center">
                             <div>
-                                <input type="checkbox" class="form-check-input" id="rememberMe">
+                                <input type="checkbox" class="form-check-input" id="rememberMe" name="remember_me">
                                 <label class="form-check-label" for="rememberMe">Se souvenir de moi</label>
                             </div>
                             <a href="/forgot_password" class="text-primary">Mot de passe oublié?</a>
